# Supernova-Laucher

./: LICENSE  README.md
crates/backend/src/: log_reader.rs  update.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: accent_color.rs  interface_config.rs  lib.rs  mclogs.rs  recent_plays.rs  ui.rs
crates/frontend/src/game_output/: mod.rs
crates/frontend/src/modals/: cats.rs  credits.rs  mod.rs  settings.rs
crates/frontend/src/pages/: combined_search_page.rs  instances_page.rs  mod.rs
crates/frontend/src/pages/instance/: quickplay_subpage.rs
crates/t/: locales.toml
